# c-scheme

./: .clang-format  .editorconfig  .gitignore  c_scheme.c  meson.build  scheme-pp.c  test.cscm
subprojects/: s7.wrap
subprojects/packagefiles/s7/: 0001-move-noreturn-for-UCRT.patch  meson.build
